--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-
 #O env está disponivel para que seja consultado pelos alunos.
 PORT=3000
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=hp
-DB_PASSWORD=amods
+DB_PASSWORD=ds564
 DB_PORT=7777
